# betmaster-test

./: .gitignore  README.md  pyproject.toml
core/: page_object.py  settings.py  testcase.py  validate.py
docker/: DockerFile  docker-compose.yml
docker/wiremock_stubs/games_categories/: GET_rpt98_correct_count.json  GET_rpt98_wrong_count.json
lib/: api.py
lib/page_objects/slots/: elements.py
tests/: conftest.py
tests/prod/: test_betmaster_categories.py
