[tool.poetry]
name = "betmaster-test"
version = "1.0.0"
description = ""
authors = ["juri86 <juri.svetlik@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12.3"
assertpy = "1.1"
playwright = "1.44.0"
pydantic-settings = "2.2.1"
pytest = "8.2.1"
pytest-asyncio = "0.23.7"
requests = "2.32.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"